Add entry for sdk (#2539)
* add

* Update 6.eco-tool-version.md

* Update list

* Update 6.eco-tool-version.md

* Update

* Update 1.nebula-client.md

* Update title

--- a/docs-2.0-en/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-en/20.appendix/6.eco-tool-version.md
@@ -117,33 +117,37 @@ Docker Compose can quickly deploy NebulaGraph clusters. For how to use it, pleas
 | {{ nebula.tag }}| [Java](https://github.com/vesoft-inc/nebula-java/releases/tag/{{java.tag}})  |
 | {{ nebula.tag }}| [HTTP](https://github.com/vesoft-inc/nebula-http-gateway/releases/tag/{{gateway.tag}})  |
 
-## Other utilities and tools
 
-The following are useful utilities and tools contributed and maintained by community users.
-* ORM
-    * Spring Boot-based ORM: [NGBATIS](https://github.com/nebula-contrib/ngbatis)
-    * Swagger Springboot Demo: [nebula-swagger-demo](https://github.com/nebula-contrib/nebula-swagger-demo)
-    * Java ORM: [graph-ocean](https://github.com/nebula-contrib/graph-ocean)
-    * JDBC Connector: [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)
-    * Python ORM: [nebula-carina](https://github.com/nebula-contrib/nebula-carina)
-    * Golang ORM: [norm](https://github.com/nebula-contrib/norm)
-* Data processing
-    * Stream ETL: [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange)
-    * DataX Plugin: [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)
-* Backend services
-    * Infrastructure services:[graph-gateway](https://github.com/nebula-contrib/graph-gateway)
-* Quick deployment
-    * Getting started with NebulaGraph in Docker Desktop: [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)
-    * Running NebulaGraph in a browser: [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)
-* Testing
-    * Java testing library: [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)
-* Clients
-    * Scala client: [zio-nebula](https://github.com/nebula-contrib/zio-nebula)
-    * Node.js client: [nebula-node](https://github.com/nebula-contrib/nebula-node)
-    * PHP client: [nebula-php](https://github.com/nebula-contrib/nebula-php)
-    * .NET client: [nebula-net](https://github.com/nebula-contrib/nebula-net)
-* Terminal 
-    * Nebula-console plugin for JetBrains IDEs: [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)
+## Community contributed tools
 
 
+The following are useful utilities and tools contributed and maintained by community users. 
 
+
+- Object Relational Mapping (ORM) frameworks
+  - [NGBATIS](https://github.com/nebula-contrib/ngbatis): An ORM framework that integrates with the Spring Boot ecosystem
+  - [graph-ocean](https://github.com/nebula-contrib/graph-ocean): An ORM framework developed based on NebulaGraph Java client
+  - [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc): An ORM framework that supports JDBC  
+  - [nebula-carina](https://github.com/nebula-contrib/nebula-carina): An ORM framework developed based on NebulaGraph Python client
+  - [norm](https://github.com/nebula-contrib/norm): An ORM framework written in Golang
+
+- Data processing tools
+  - [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange): Enables real-time data synchronization from MySQL to NebulaGraph
+  - [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin): Provides NebulaGraph's Reader and Writer plugins based on DataX to enable offline data synchronization
+
+- Quick deployment
+  - [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext): Starts NebulaGraph in Docker Desktop in 10 seconds
+  - [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite): A NebulaGraph sandbox running in the browser
+ 
+- Testing
+  - [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula): A lightweight database testing library for Java
+
+- Clients
+  - [zio-nebula](https://github.com/nebula-contrib/zio-nebula): Scala client
+  - [nebula-node](https://github.com/nebula-contrib/nebula-node): Node.js client
+  - [nebula-php](https://github.com/nebula-contrib/nebula-php): PHP client
+  - [nebula-net](https://github.com/nebula-contrib/nebula-net): .NET client
+  - [nebula-rust](https://github.com/vesoft-inc/nebula-rust): Rust client
+
+- Terminal tools
+  - [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin): A Nebula-console plugin for JetBrains IDEs that supports syntax highlighting, function field auto-completion, data table pagination, and relationship graphs.
