use memory tracker in a containered env

--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -126,6 +126,23 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 ## Memory tracker configurations
 
+!!! Note
+
+    Memory Tracker is a memory management tool designed to monitor and limit memory usage. For large-scale queries, Memory Tracker can prevent memory leaks and Out Of Memory (OOM) issues. If you're using Memory Tracker in a containerized environment, you need to add the relevant configurations to the configuration files of the Storage and Graph services.
+
+    1. Create directories `/sys/fs/cgroup/graphd/` and `/sys/fs/cgroup/storaged/`, and configure the `memory.max` in each directory.
+    2. Add the relevant configurations to `etc/nebula-graphd.conf` and `etc/nebula-storaged.conf`:
+
+      ```bash
+      --containerized=true
+      --cgroup_v2_controllers=/sys/fs/cgroup/graphd/cgroup.controllers
+      --cgroup_v2_memory_stat_path=/sys/fs/cgroup/graphd/memory.stat
+      --cgroup_v2_memory_max_path=/sys/fs/cgroup/graphd/memory.max
+      --cgroup_v2_memory_current_path=/sys/fs/cgroup/graphd/memory.current
+      ```
+
+    For more details, see [Memory Tracker: Memory Management Practice in NebulaGraph Database](https://www.nebula-graph.io/posts/memory-tracker-practices).
+
 | Name                 | Predefined value                   | Description                               |Whether supports runtime dynamic modifications|
 | :------------------- | :------------------------ | :------------------------------------------ |:------------------|
 |`memory_tracker_limit_ratio`    |`0.8`  | The value of this parameter can be set to `(0, 1]`, `2`, and `3`.<br/>**Caution: When setting this parameter, ensure that the value of `system_memory_high_watermark_ratio` is not set to `1`, otherwise the value of this parameter will not take effect.**<br/>`(0, 1]`: The percentage of available memory. Formula: `Percentage of available memory = Available memory / (Total memory - Reserved memory)`.<br/>When an ongoing query results in memory usage exceeding the configured limit, the query fails and subsequently the memory is released. <br/> **Note**: For the hybrid deployment of a cluster with cloud-based and on-premises nodes, the value of `memory_tracker_limit_ratio` should be set to a **lower** value. For example, when the graphd is expected to occupy only 50% of memory, the value can be set to less than `0.5`.<br/>`2`: Dynamic Self Adaptive mode. MemoryTracker dynamically adjusts the available memory based on the system's current available memory. <br/>**Note**: This feature is experimental. As memory usage cannot be monitored in real time in dynamic adaptive mode, an OOM error may still occur to handle large memory allocations. <br/>`3`: Disable MemoryTracker. MemoryTracker only logs memory usage and does not interfere with executions even if the limit is exceeded.| Yes|
