--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -128,7 +128,22 @@ Graph 服务提供了两份初始配置文件`nebula-graphd.conf.default`和`neb
 
 ## memory tracker 配置
 
-有关 Memory Tracker 的详细信息，请参见[图数据库 NebulaGraph 的内存管理实践之 Memory Tracker](https://discuss.nebula-graph.com.cn/t/topic/13128)。
+!!! note
+
+    Memory Tracker 是一个内存管理工具，用于监控和限制内存使用。对于大型查询，Memory Tracker 可以防止内存泄漏和 OOM 问题。如果在容器环境中使用 Memory Tracker，需要在 Storage 和 Graph 服务的配置文件中添加相关配置。操作如下：
+
+    1. 创建 `/sys/fs/cgroup/graphd/`，`/sys/fs/cgroup/storaged/`，并配置各自目录下的`memory.max`。
+    2. 在`etc/nebula-graphd.conf`，`etc/nebula-storaged.conf`添加相关配置:
+      
+      ```bash
+      --containerized=true
+      --cgroup_v2_controllers=/sys/fs/cgroup/graphd/cgroup.controllers
+      --cgroup_v2_memory_stat_path=/sys/fs/cgroup/graphd/memory.stat
+      --cgroup_v2_memory_max_path=/sys/fs/cgroup/graphd/memory.max
+      --cgroup_v2_memory_current_path=/sys/fs/cgroup/graphd/memory.current
+      ```
+
+    详细信息，请参见[图数据库 NebulaGraph 的内存管理实践之 Memory Tracker](https://discuss.nebula-graph.com.cn/t/topic/13128)。
 
 | 名称                 | 预设值                    | 说明                               |是否支持运行时动态修改|
 | :------------------- | :------------------------ | :------------------------------------------ |---------------------|
