--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -128,10 +128,10 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 !!! Note
 
-    Memory Tracker is a memory management tool designed to monitor and limit memory usage. For large-scale queries, Memory Tracker can prevent memory leaks and Out Of Memory (OOM) issues. If you're using Memory Tracker in a containerized environment, you need to add the relevant configurations to the configuration files of the Storage and Graph services.
+    Memory Tracker is a memory management tool designed to monitor and limit memory usage. For large-scale queries, Memory Tracker can prevent Out Of Memory (OOM) issues. If you're using Memory Tracker in a containerized environment, you need to add the relevant configurations to the configuration file of the Graph service.
 
-    1. Create directories `/sys/fs/cgroup/graphd/` and `/sys/fs/cgroup/storaged/`, and configure the `memory.max` in each directory.
-    2. Add the relevant configurations to `etc/nebula-graphd.conf` and `etc/nebula-storaged.conf`:
+    1. Create the directory `/sys/fs/cgroup/graphd/`, and then add and configure the `memory.max` file under the directory.
+    2. Add the following configurations to `etc/nebula-graphd.conf`.
 
       ```bash
       --containerized=true
