--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -130,10 +130,10 @@ Graph 服务提供了两份初始配置文件`nebula-graphd.conf.default`和`neb
 
 !!! note
 
-    Memory Tracker 是一个内存管理工具，用于监控和限制内存使用。对于大型查询，Memory Tracker 可以防止内存泄漏和 OOM 问题。如果在容器环境中使用 Memory Tracker，需要在 Storage 和 Graph 服务的配置文件中添加相关配置。操作如下：
+    Memory Tracker 是一个内存管理工具，用于监控和限制内存使用。对于大型查询，Memory Tracker 可以防止 OOM 问题。如果在容器环境中使用 Memory Tracker，需要在 Graph 服务的配置文件中添加相关配置。操作如下：
 
-    1. 创建 `/sys/fs/cgroup/graphd/`，`/sys/fs/cgroup/storaged/`，并配置各自目录下的`memory.max`。
-    2. 在`etc/nebula-graphd.conf`，`etc/nebula-storaged.conf`添加相关配置:
+    1. 创建`/sys/fs/cgroup/graphd/`，添加并配置`memory.max`。
+    2. 在`etc/nebula-graphd.conf`添加以下配置。
       
       ```bash
       --containerized=true
@@ -143,8 +143,7 @@ Graph 服务提供了两份初始配置文件`nebula-graphd.conf.default`和`neb
       --cgroup_v2_memory_current_path=/sys/fs/cgroup/graphd/memory.current
       ```
 
-    详细信息，请参见[图数据库 NebulaGraph 的内存管理实践之 Memory Tracker](https://discuss.nebula-graph.com.cn/t/topic/13128)。
-
+    详细信息，请参见[容器/cgroup 模式](https://discuss.nebula-graph.com.cn/t/topic/13128)。
 | 名称                 | 预设值                    | 说明                               |是否支持运行时动态修改|
 | :------------------- | :------------------------ | :------------------------------------------ |---------------------|
 |`memory_tracker_limit_ratio`    |`0.8`  |取值可设置为：`(0, 1]`、`2`、`3`。<br/>**警惕：设置该参数时请确保`system_memory_high_watermark_ratio`的值不为`1`，否则该参数的值不生效。**<br/>`(0, 1]`：可用内存的百分比。计算公式：可用内存的百分比 = 可用内存 / (总内存 - 保留内存)。<br/>当正在进行的查询导致内存使用超过配置的内存限制时，该查询会失败，并在失败后释放内存。<br/> **注意**：对于云上和本地节点混合部署的集群，需要根据实际情况**调小**该参数。例如，当预期 Graphd 只占用 50% 的内存时，该参数的值可设置为小于`0.5`。<br/>`2`：动态自适应模式（Dynamic Self Adaptive），Memory Tracker 会根据系统当前的可用内存，动态调整可用内存。<br/>**注意**：此功能为实验性功能，由于动态自适应不能做到实时监控操作系统内存使用情况，在一些大内存分配的场景，还是会存在 OOM 可能。<br/>`3`：关掉 Memory Tracker，Memory Tracker 将只记录内存使用情况，即使超过限额，也不会干预执行。|支持|
