--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -132,7 +132,7 @@ Graph 服务提供了两份初始配置文件`nebula-graphd.conf.default`和`neb
 
     Memory Tracker 是一个内存管理工具，用于监控和限制内存使用。对于大型查询，Memory Tracker 可以防止 OOM 问题。如果在容器环境中使用 Memory Tracker，需要在 Graph 服务的配置文件中添加相关配置。操作如下：
 
-    1. 创建`/sys/fs/cgroup/graphd/`，添加并配置`memory.max`。
+    1. 创建目录`/sys/fs/cgroup/graphd/`，添加并配置`memory.max`。
     2. 在`etc/nebula-graphd.conf`添加以下配置。
       
       ```bash
