--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -179,7 +179,22 @@ For more information, see [RocksDB official documentation](https://rocksdb.org/)
 
 ## Memory Tracker configurations
 
-For details about Memory Tracker, see [Memory Tracker: Memory Management Practice in NebulaGraph Database](https://www.nebula-graph.io/posts/memory-tracker-practices)
+!!! Note
+
+    Memory Tracker is a memory management tool designed to monitor and limit memory usage. For large-scale queries, Memory Tracker can prevent Out Of Memory (OOM) issues. If you're using Memory Tracker in a containerized environment, you need to add the relevant configurations to the configuration file of the Storage service.
+
+    1. Create the directory `/sys/fs/cgroup/storaged/`, and then add and configure the `memory.max` file under the directory.
+    2. Add the following configurations to `etc/nebula-storaged.conf`.
+
+      ```bash
+      --containerized=true
+      --cgroup_v2_controllers=/sys/fs/cgroup/graphd/cgroup.controllers
+      --cgroup_v2_memory_stat_path=/sys/fs/cgroup/graphd/memory.stat
+      --cgroup_v2_memory_max_path=/sys/fs/cgroup/graphd/memory.max
+      --cgroup_v2_memory_current_path=/sys/fs/cgroup/graphd/memory.current
+      ```
+
+    For more details, see [Memory Tracker: Memory Management Practice in NebulaGraph Database](https://www.nebula-graph.io/posts/memory-tracker-practices).
 
 | Name                 | Predefined value                   | Description                               |Whether supports runtime dynamic modifications|
 | :------------------- | :------------------------ | :------------------------------------------ |:------------------|
