--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
@@ -185,7 +185,7 @@ nebula-docker-compose/
 
 Docker Compose 配置文件位置为`nebula-docker-compose/docker-compose.yaml`，修改该文件内的配置并重启服务即可使新配置生效。
 
-`docker-compose.yaml`文件中的配置会覆盖服务容器内的配置文件（`/usr/local/nebula/etc`）的配置，因此也可以通过修改`docker-compose.yaml`文件配置来持久化服务的配置。
+`docker-compose.yaml`文件中的配置会覆盖服务容器内的配置文件（`/usr/local/nebula/etc`）的配置，因此也可以通过修改`docker-compose.yaml`文件设置服务的配置。
 
 具体的配置说明请参见[配置管理](../../5.configurations-and-logs/1.configurations/1.configurations.md)。
 
