--- a/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+++ b/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
@@ -218,15 +218,15 @@ Restarting nebula-docker-compose_graphd_1    ... done
 Restarting nebula-docker-compose_storaged0_1 ... done
 ```
 
-## Stop and delete NebulaGraph services
+## Stop and remove NebulaGraph services
 
-You can stop and delete all the NebulaGraph services by running the following command:
+You can stop and remove all the NebulaGraph services by running the following command:
 
 !!! danger
 
-    This command stops and deletes all the containers of the NebulaGraph services and the related network. If you define volumes in the `docker-compose.yaml`, the related data are retained.
+    This command stops and removes all the containers of the NebulaGraph services and the related network. If you define volumes in the `docker-compose.yaml`, the related data are retained.
  
-    The command `docker-compose down -v` deletes all the local data. Try this command if you are using the nightly release and having some compatibility issues.
+    The command `docker-compose down -v` removes all the local data. Try this command if you are using the nightly release and having some compatibility issues.
 
 ```bash
 $ docker-compose down
