--- a/docs-2.0-en/1.introduction/2.data-model.md
+++ b/docs-2.0-en/1.introduction/2.data-model.md
@@ -49,9 +49,9 @@ The following table is an example of the structure of the basketball player data
 
 | Element  | Name  | Property name (Data type)  |  Description  |
 | :---  | :---  | :---  | :---  |
-| Tag  | **player**  | name (string) </br>age (int) | Represents players in the team. </br>The property `name` indicates name and the `age` indicates age.   |
+| Tag  | **player**  | name (string) </br>age (int) | Represents players in the team. </br>The properties `name` and `age` indicate the name and age.   |
 | Tag  | **team** | name (string)  | Represents the teams. </br>The property `name` indicates the team name. |
-| Edge type | **serve**  | start_year (int) </br> end_year (int) |  Represents the action of a player working for a team. The action links the player to the team, and the direction is from the player to the team.</br>The property `start_year` indicates the start year of the work, and the `end_year` indicates the end year of the work.|
+| Edge type | **serve**  | start_year (int) </br> end_year (int) |  Represents the action of a player serving a team. The action links the player to the team, and the direction is from the player to the team.</br>The properties `start_year` and `end_year` indicate the start year and end year of the service respectively.|
 | Edge type | **follow**  | degree (int) | Represents the action of a player focusing on another player. The action links one player to the other player, and the direction is from one player to the other player.</br>The property `degree` indicates the level of focus. |
 
 !!! note
