--- a/docs-2.0-zh/1.introduction/2.data-model.md
+++ b/docs-2.0-zh/1.introduction/2.data-model.md
@@ -64,7 +64,7 @@
 |Tag|  **player**      | name (string) </br>age（int）  | 表示球员。</br>属性`name`表示姓名，`age`表示年龄。  |
 |Tag|   **team** |  name (string) |  表示球队。</br>属性`name`表示球队名。 |
 |Edge type|  **serve**  |  start_year (int) </br> end_year (int) | 表示球员效力球队的行为。该行为将球员和球队联系起来，方向是从球员到球队。</br>属性`start_year`表示效力的起始年份，`end_year`表示效力的结束年份。  |
-|Edge type|  **follow**  | degree (int)  | 表示球员关注另一个球员的行为。该行为将两个球员联系起来，方向是从一个球员到另一个球员。</br>属性`degree`表示关注程度。  |
+|Edge type|  **follow**  | degree (int)  | 表示推特上球员关注另一个球员的行为。该行为将两个球员联系起来，方向是从一个球员到另一个球员。</br>属性`degree`表示喜爱程度。  |
 
 !!! note
 
