--- a/docs-2.0-en/14.client/3.nebula-cpp-client.md
+++ b/docs-2.0-en/14.client/3.nebula-cpp-client.md
@@ -105,7 +105,7 @@ Compile the CPP file to an executable file, then you can use it. The following s
 
 ## API reference
 
-Click [here](https://vesoft-inc.github.io/nebula-cpp/release-3.4/annotated.html) to check the classes and functions provided by the CPP Client.
+Click [here](https://vesoft-inc.github.io/nebula-cpp/{{cpp.branch}}/annotated.html) to check the classes and functions provided by the CPP Client.
 
 ## Core of the example code
 
