--- a/docs-2.0-en/14.client/4.nebula-java-client.md
+++ b/docs-2.0-en/14.client/4.nebula-java-client.md
@@ -59,7 +59,7 @@ If there is no Maven to manage the project, manually download the [JAR file](htt
 
 ## API reference
 
-Click [here](https://vesoft-inc.github.io/nebula-java/release-3.6/annotated.html) to check the classes and functions provided by the Java Client.
+Click [here](https://vesoft-inc.github.io/nebula-java/{{java.branch}}/annotated.html) to check the classes and functions provided by the Java Client.
 
 ## Core of the example code
 
