--- a/docs-2.0-zh/14.client/3.nebula-cpp-client.md
+++ b/docs-2.0-zh/14.client/3.nebula-cpp-client.md
@@ -105,7 +105,7 @@
 
 ## API 文档
 
-点击[此处](https://vesoft-inc.github.io/nebula-cpp/release-3.4/annotated.html)查看 CPP 客户端提供的各种类和方法。
+点击[此处](https://vesoft-inc.github.io/nebula-cpp/{{cpp.branch}}/annotated.html)查看 CPP 客户端提供的各种类和方法。
 
 ## 核心代码
 
