--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/3.go.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/3.go.md
@@ -213,19 +213,18 @@ nebula> MATCH (v)<-[e:follow]- (v2) WHERE id(v) == 'player100' \
 场景：使用子查询的结果作为图遍历的起始点。
 
 ```ngql
-# 查询 player100 的朋友和朋友所属队伍。
-nebula> GO FROM "player100" OVER follow REVERSELY \
+# 查询 player100 年龄大于 20 的朋友和这些朋友所属队伍。
+nebula> GO FROM "player100" OVER follow \
         YIELD src(edge) AS id | \
         GO FROM $-.id OVER serve \
         WHERE properties($^).age > 20 \
-        YIELD properties($^).name AS FriendOf, properties($$).name AS Team;
+        YIELD properties($^).name AS Friend, properties($$).name AS Team;
 +---------------------+-----------------+
-| FriendOf            | Team            |
+| Friend              | Team            |
 +---------------------+-----------------+
-| "Boris Diaw"        | "Spurs"         |
-| "Boris Diaw"        | "Jazz"          |
-| "Boris Diaw"        | "Suns"          |
-...
+| "Tim Duncan"        | "Spurs"         |
+| "Tim Duncan"        | "Spurs"         |
++---------------------+-----------------+
 
 # 该 MATCH 查询与上一个 GO 查询具有相同的语义。
 nebula> MATCH (v)<-[e:follow]- (v2)-[e2:serve]->(v3)  \
