--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/5.lookup.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/5.lookup.md
@@ -111,7 +111,7 @@ nebula> LOOKUP ON player \
 | "player140" |
 +-------------+
 
-# 查询所有 name 以 B 开头，且 age 在 22 和 30 之间的点数据，并返回 name 和 age 属性值。
+# 查询所有 name 以 B 开头，且 age 是 22 或 30 的点数据，并返回 name 和 age 属性值。
 nebula> LOOKUP ON player \
         WHERE player.name STARTS WITH "B" \
         AND player.age IN [22,30] \
