--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.find-path.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.find-path.md
@@ -9,7 +9,7 @@ The `FIND PATH` statement finds the paths between the selected source vertices a
 ## Syntax
 
 ```ngql
-FIND { SHORTEST | SINGLE SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
+FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
 OVER <edge_type_list> [REVERSELY | BIDIRECT] 
 [<WHERE clause>] [UPTO <N> {STEP|STEPS}] 
 YIELD path as <alias>
