add single shortest path

--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.find-path.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/6.find-path.md
@@ -19,7 +19,9 @@ YIELD path as <alias>
     [vertex_id [, vertex_id] ...]
 ```
 
-- `SHORTEST` finds all the shortest path.
+- `SHORTEST` finds all shortest paths and returns all of them.
+
+- `SINGLE SHORTEST` finds all shortest paths and returns only one of them randomly.
 
 - `ALL` finds all the paths.
 
@@ -92,6 +94,18 @@ nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player
 | <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player109")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>        |
 | ...                                                                                                                                                                                            |
 +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+```
+
+```ngql
+nebula> FIND SINGLE SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| p                                                                                                                                                                                       |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <("player100")<-[:follow@0 {}]-("player144")<-[:follow@0 {}]-("player133")>                                                                                                             |
+| <("player100")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>                                                         |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player114")<-[:follow@0 {}]-("player133")>                           |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")> |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 ```
 
 ```ngql
