--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.find-path.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.find-path.md
@@ -8,10 +8,8 @@
 
 ## 语法
 
-
-
 ```ngql
-FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
+FIND { SHORTEST | SINGLE SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
 OVER <edge_type_list> [REVERSELY | BIDIRECT] 
 [<WHERE clause>] [UPTO <N> {STEP|STEPS}] 
 YIELD path as <alias>
@@ -22,6 +20,8 @@ YIELD path as <alias>
 ```
 
 - `SHORTEST`：查找所有最短路径。
+
+- `SINGLE SHORTEST`：查找所有最短路径，随机返回其中一条。
 
 - `ALL`：查找所有路径。
 
@@ -45,9 +45,6 @@ YIELD path as <alias>
 
 
 
-
-
-
 !!! note
 
     `FIND PATH`语句检索的路径类型为`trail`，即检索的路径只有点可以重复，边不可以重复。详情请参见[路径](../../1.introduction/2.1.path.md)。
@@ -67,7 +64,6 @@ YIELD path as <alias>
 返回的路径格式类似于`(<vertex_id>)-[:<edge_type_name>@<rank>]->(<vertex_id)`。
 
 ```ngql
-# 查找并返回 player102 到 team204 的最短路径。
 nebula> FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
 +--------------------------------------------+
 | p                                          |
@@ -77,7 +73,6 @@ nebula> FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
 ```
 
 ```ngql
-# 查找并返回带属性值的 team204 到 player100 的最短反向路径。
 nebula> FIND SHORTEST PATH WITH PROP FROM "team204" TO "player100" OVER * REVERSELY YIELD path AS p;
 +--------------------------------------------------------------------------------------------------------------------------------------+
 | p                                                                                                                                    |
@@ -87,7 +82,6 @@ nebula> FIND SHORTEST PATH WITH PROP FROM "team204" TO "player100" OVER * REVERS
 ```
 
 ```ngql
-# 查找并返回起点为 player100,player130 而终点为 player132,player133 的 18 跳之内双向最短路径。
 nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
 +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | p                                                                                                                                                                                              |
@@ -107,7 +101,19 @@ nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player
 
 
 ```ngql
-# 查找所有从 player100 到 team204,并且 degree 为空或者大于等于 0 的路径。
+nebula> FIND SINGLE SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| p                                                                                                                                                                                       |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <("player100")<-[:follow@0 {}]-("player144")<-[:follow@0 {}]-("player133")>                                                                                                             |
+| <("player100")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>                                                         |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player114")<-[:follow@0 {}]-("player133")>                           |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")> |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+```
+
+
+```ngql
 nebula> FIND ALL PATH FROM "player100" TO "team204" OVER * WHERE follow.degree is EMPTY or follow.degree >=0 YIELD path AS p;
 +------------------------------------------------------------------------------+
 | p                                                                            |
@@ -120,7 +126,6 @@ nebula> FIND ALL PATH FROM "player100" TO "team204" OVER * WHERE follow.degree i
 ```
 
 ```ngql
-# 查找所有从 player100 到 team204 无环路径。
 nebula> FIND NOLOOP PATH FROM "player100" TO "team204" OVER * YIELD path AS p;
 +--------------------------------------------------------------------------------------------------------+
 | p                                                                                                      |
