add single shortest path (#2558)
* add single shortest path

* Update 6.find-path.md

--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.find-path.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.find-path.md
@@ -8,10 +8,8 @@
 
 ## 语法
 
-
-
 ```ngql
-FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
+FIND { SHORTEST | SINGLE SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list>
 OVER <edge_type_list> [REVERSELY | BIDIRECT] 
 [<WHERE clause>] [UPTO <N> {STEP|STEPS}] 
 YIELD path as <alias>
@@ -22,6 +20,8 @@ YIELD path as <alias>
 ```
 
 - `SHORTEST`：查找所有最短路径。
+
+- `SINGLE SHORTEST`：查找所有最短路径，随机返回其中一条。
 
 - `ALL`：查找所有路径。
 
@@ -42,9 +42,6 @@ YIELD path as <alias>
 - `ORDER BY $-.path`：将返回结果进行排序。排序规则参见 [Path](https://github.com/vesoft-inc/nebula/blob/{{nebula.branch}}/src/common/datatypes/Path.h#L86)。
 
 - `LIMIT <M>`：指定返回的最大行数。
-
-
-
 
 
 
@@ -104,10 +101,22 @@ nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player
 +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 ```
 
+```ngql
+# 查找 player100 和 player130 分别与 player132 和 player133 之间跳数最长为 18 步的最短路径。
+nebula> FIND SINGLE SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| p                                                                                                                                                                                       |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| <("player100")<-[:follow@0 {}]-("player144")<-[:follow@0 {}]-("player133")>                                                                                                             |
+| <("player100")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")>                                                         |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player114")<-[:follow@0 {}]-("player133")>                           |
+| <("player130")-[:serve@0 {}]->("team219")<-[:serve@0 {}]-("player112")-[:serve@0 {}]->("team204")<-[:serve@0 {}]-("player138")-[:serve@0 {}]->("team225")<-[:serve@0 {}]-("player132")> |
++-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+```
 
 
 ```ngql
-# 查找所有从 player100 到 team204,并且 degree 为空或者大于等于 0 的路径。
+# 查找所有从 player100 到 team204，并且 degree 为空或者大于等于 0 的路径。
 nebula> FIND ALL PATH FROM "player100" TO "team204" OVER * WHERE follow.degree is EMPTY or follow.degree >=0 YIELD path AS p;
 +------------------------------------------------------------------------------+
 | p                                                                            |
