--- a/docs-2.0-en/3.ngql-guide/6.functions-and-expressions/1.math.md
+++ b/docs-2.0-en/3.ngql-guide/6.functions-and-expressions/1.math.md
@@ -75,12 +75,19 @@ nebula> RETURN ceil(9.1);
 
 round() returns the rounded value of the specified number. Pay attention to the floating-point precision when using this function.
 
-Syntax: `round(<expression>, <digit>)`
+Syntax: `round(<expression>, <precision>, <mode>)`
 
 - `expression`: An expression of which the result type is double.
 
-- `digit`: Decimal digits. If `digit` is less than 0, round at the left of the decimal point.
+- `precision`: Decimal digits. If `precision` is less than 0, round at the left of the decimal point.
 
+- `mode`: A string specifying the rounding mode. The following valid values are supported:
+  - `DOWN`: Round towards zero.
+  - `CEILING`: Round towards positive infinity.
+  - `FLOOR`: Round towards negative infinity.
+  - `HALF_UP`: Round towards the closest value of the given precision, with ties being rounded away from zero.
+  - `HALF_DOWN`: Round towards the closest value of the given precision, with ties being rounded towards zero.
+  - `HALF_EVEN`: Round towards the closest value of the given precision, with ties being rounded to the nearest even number.
 - Result type: Double
 
 Example:
@@ -98,6 +105,25 @@ nebula> RETURN round(314.15926, -1);
 +-----------------------+
 | 310.0                 |
 +-----------------------+
+nebula> RETURN round(314.15926, 2, "DOWN");
++---------------------------+
+| round(314.15926,2,"DOWN") |
++---------------------------+
+| 314.15                    |
++---------------------------+
+nebula> RETURN round(314.15926, 2, "CEILING");
++------------------------------+
+| round(314.15926,2,"CEILING") |
++------------------------------+
+| 314.16                       |
++------------------------------+
+nebula> RETURN round(314.15926, 2, "FLOOR");
++----------------------------+
+| round(314.15926,2,"FLOOR") |
++----------------------------+
+| 314.15                     |
++----------------------------+
+
 ```
 
 ## sqrt()
